--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,12 +33,13 @@ jobs:
     env:
       CI: true
       NODE_ENV: test
-      # usa o Postgres do serviço acima
       DATABASE_URL: postgresql://postgres:postgres@localhost:5432/asclepius_test?schema=public
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node 20
         uses: actions/setup-node@v4
@@ -46,11 +47,13 @@ jobs:
           node-version: 20
           cache: pnpm
 
-      - name: Setup PNPM 10.18.2
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10.18.2
-          run_install: false
+      # ✅ Garante PNPM via Corepack (não depende de pnpm/action-setup)
+      - name: Enable Corepack and prepare PNPM
+        run: |
+          corepack enable
+          corepack prepare pnpm@10.18.2 --activate
+          pnpm -v
+          node -v
 
       - name: Install deps (workspace)
         run: pnpm install -r --frozen-lockfile
@@ -77,9 +80,8 @@ jobs:
 
       - name: Test (backend)
         run: pnpm --filter "./asclepius-backend" run test
-        continue-on-error: false
 
-      # --- Frontend (opcional: tolerate failures se ainda estiver em ajuste) ---
+      # --- Frontend (mantido com tolerância, ajuste depois se quiser) ---
       - name: Playwright browsers (frontend)
         run: pnpm --filter "./asclepius-frontend" exec playwright install --with-deps
         continue-on-error: true
