--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: true
 
       - name: Setup Node 20
         uses: actions/setup-node@v4
@@ -47,13 +48,21 @@ jobs:
           node-version: 20
           cache: pnpm
 
-      # ✅ Garante PNPM via Corepack (não depende de pnpm/action-setup)
-      - name: Enable Corepack and prepare PNPM
+      # --- PNPM robusto: Corepack + fallback global ---
+      - name: Ensure PNPM 10.18.2 available
+        shell: bash
         run: |
-          corepack enable
-          corepack prepare pnpm@10.18.2 --activate
-          pnpm -v
+          set -euxo pipefail
           node -v
+          # habilita corepack e tenta ativar o pnpm desejado
+          corepack enable
+          corepack prepare pnpm@10.18.2 --activate || true
+          # se ainda não tiver pnpm no PATH, instala globalmente como fallback
+          if ! command -v pnpm >/dev/null 2>&1; then
+            npm i -g pnpm@10.18.2
+          fi
+          pnpm -v
+          pnpm config set store-dir ~/.pnpm-store
 
       - name: Install deps (workspace)
         run: pnpm install -r --frozen-lockfile
@@ -61,6 +70,7 @@ jobs:
       - name: Wait for Postgres (TCP)
         shell: bash
         run: |
+          set -e
           for i in {1..60}; do
             (echo > /dev/tcp/localhost/5432) >/dev/null 2>&1 && { echo "Postgres OK"; exit 0; }
             echo "Aguardando Postgres... ($i)"; sleep 1;
@@ -81,7 +91,7 @@ jobs:
       - name: Test (backend)
         run: pnpm --filter "./asclepius-backend" run test
 
-      # --- Frontend (mantido com tolerância, ajuste depois se quiser) ---
+      # --- Frontend (tolerante enquanto estabiliza) ---
       - name: Playwright browsers (frontend)
         run: pnpm --filter "./asclepius-frontend" exec playwright install --with-deps
         continue-on-error: true
