test/ts: adiciona req.user (augmentation), Jest+ts-jest, tsconfigs de build/test

--- a/asclepius-backend/package.json
+++ b/asclepius-backend/package.json
@@ -13,7 +13,7 @@
                     "prisma:seed":  "ts-node src/scripts/seed.ts",
                     "db:reset":  "prisma migrate reset --force \u0026\u0026 npm run prisma:seed",
                     "user:ensure-admin":  "ts-node src/scripts/ensure-admin.ts",
-                    "test":  "jest",
+                    "test":  "jest --passWithNoTests",
                     "test:watch":  "jest --watch",
                     "test:coverage":  "jest --coverage",
                     "test:e2e":  "powershell -ExecutionPolicy Bypass -File tests\\\\test-all.ps1",
@@ -50,7 +50,7 @@
                             "@types/jest":  "^30.0.0",
                             "@types/jsonwebtoken":  "^9.0.10",
                             "@types/morgan":  "^1.9.10",
-                            "@types/node":  "^20.19.21",
+                            "@types/node":  "^20.19.22",
                             "@types/supertest":  "^6.0.3",
                             "@types/swagger-ui-express":  "^4.1.8",
                             "jest":  "^30.2.0",
