--- a/asclepius-backend/package.json
+++ b/asclepius-backend/package.json
@@ -5,7 +5,7 @@
     "main":  "dist/server.js",
     "scripts":  {
                     "dev":  "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts",
-                    "build":  "tsc",
+                    "build":  "tsc -p tsconfig.build.json",
                     "start":  "node dist/server.js",
                     "prisma:generate":  "pnpm exec prisma generate",
                     "prisma:migrate":  "pnpm exec prisma migrate deploy",
