--- a/asclepius-backend/package.json
+++ b/asclepius-backend/package.json
@@ -1,69 +1,69 @@
 {
-    "name":  "asclepius-backend",
-    "version":  "1.0.0",
-    "description":  "Asclepius SGHSS - Backend MVP",
-    "main":  "dist/server.js",
-    "scripts":  {
-                    "dev":  "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts",
-                    "build":  "tsc -p tsconfig.build.json",
-                    "start":  "node dist/server.js",
-                    "prisma:generate":  "pnpm exec prisma generate",
-                    "prisma:migrate":  "pnpm exec prisma migrate deploy",
-                    "prisma:studio":  "prisma studio",
-                    "prisma:seed":  "ts-node src/scripts/seed.ts",
-                    "db:reset":  "prisma migrate reset --force \u0026\u0026 npm run prisma:seed",
-                    "user:ensure-admin":  "ts-node src/scripts/ensure-admin.ts",
-                    "test":  "jest --passWithNoTests",
-                    "test:watch":  "jest --watch",
-                    "test:coverage":  "jest --coverage",
-                    "test:e2e":  "powershell -ExecutionPolicy Bypass -File tests\\\\test-all.ps1",
-                    "predev":  "pnpm exec prisma generate",
-                    "postinstall":  "pnpm exec prisma generate"
-                },
-    "keywords":  [
-                     "hospital",
-                     "healthcare",
-                     "backend",
-                     "asclepius"
-                 ],
-    "author":  "Seu Nome",
-    "license":  "MIT",
-    "dependencies":  {
-                         "@prisma/client":  "^6.17.1",
-                         "bcryptjs":  "^3.0.2",
-                         "cors":  "^2.8.5",
-                         "dotenv":  "^17.2.3",
-                         "eslint":  "^9.37.0",
-                         "express":  "^4.21.2",
-                         "express-async-errors":  "^3.1.1",
-                         "express-rate-limit":  "^8.1.0",
-                         "helmet":  "^8.1.0",
-                         "jsonwebtoken":  "^9.0.2",
-                         "morgan":  "^1.10.1",
-                         "swagger-ui-express":  "^5.0.1",
-                         "zod":  "^4.1.12"
-                     },
-    "devDependencies":  {
-                            "@types/bcryptjs":  "^2.4.6",
-                            "@types/cors":  "^2.8.19",
-                            "@types/express":  "^4.17.23",
-                            "@types/jest":  "^30.0.0",
-                            "@types/jsonwebtoken":  "^9.0.10",
-                            "@types/morgan":  "^1.9.10",
-                            "@types/node":  "^20.19.22",
-                            "@types/supertest":  "^6.0.3",
-                            "@types/swagger-ui-express":  "^4.1.8",
-                            "jest":  "^30.2.0",
-                            "prisma":  "^6.17.1",
-                            "supertest":  "^7.1.4",
-                            "ts-jest":  "^29.4.4",
-                            "ts-node":  "^10.9.2",
-                            "ts-node-dev":  "^2.0.0",
-                            "typescript":  "^5.9.3",
-                            "vitest":  "^3.2.4"
-                        },
-    "prisma":  {
-                   "seed":  "ts-node src/scripts/seed.ts",
-                   "schema":  "prisma/schema.prisma"
-               }
+    "name": "asclepius-backend",
+    "version": "1.0.0",
+    "description": "Asclepius SGHSS - Backend MVP",
+    "main": "dist/server.js",
+    "scripts": {
+        "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --project tsconfig.build.json src/server.ts",
+        "build": "tsc -p tsconfig.build.json",
+        "start": "node dist/server.js",
+        "prisma:generate": "pnpm exec prisma generate",
+        "prisma:migrate": "pnpm exec prisma migrate deploy",
+        "prisma:studio": "prisma studio",
+        "prisma:seed": "ts-node src/scripts/seed.ts",
+        "db:reset": "prisma migrate reset --force && npm run prisma:seed",
+        "user:ensure-admin": "ts-node src/scripts/ensure-admin.ts",
+        "test": "jest --passWithNoTests",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage",
+        "test:e2e": "powershell -ExecutionPolicy Bypass -File tests\\\\test-all.ps1",
+        "predev": "pnpm exec prisma generate",
+        "postinstall": "pnpm exec prisma generate"
+    },
+    "keywords": [
+        "hospital",
+        "healthcare",
+        "backend",
+        "asclepius"
+    ],
+    "author": "Seu Nome",
+    "license": "MIT",
+    "dependencies": {
+        "@prisma/client": "^6.17.1",
+        "bcryptjs": "^3.0.2",
+        "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
+        "eslint": "^9.37.0",
+        "express": "^4.21.2",
+        "express-async-errors": "^3.1.1",
+        "express-rate-limit": "^8.1.0",
+        "helmet": "^8.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "morgan": "^1.10.1",
+        "swagger-ui-express": "^5.0.1",
+        "zod": "^4.1.12"
+    },
+    "devDependencies": {
+        "@types/bcryptjs": "^2.4.6",
+        "@types/cors": "^2.8.19",
+        "@types/express": "^4.17.23",
+        "@types/jest": "^30.0.0",
+        "@types/jsonwebtoken": "^9.0.10",
+        "@types/morgan": "^1.9.10",
+        "@types/node": "^20.19.22",
+        "@types/supertest": "^6.0.3",
+        "@types/swagger-ui-express": "^4.1.8",
+        "jest": "^30.2.0",
+        "prisma": "^6.17.1",
+        "supertest": "^7.1.4",
+        "ts-jest": "^29.4.4",
+        "ts-node": "^10.9.2",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.9.3",
+        "vitest": "^3.2.4"
+    },
+    "prisma": {
+        "seed": "ts-node src/scripts/seed.ts",
+        "schema": "prisma/schema.prisma"
+    }
 }
