--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI (safe pnpm + logs)
+name: CI (minimal pnpm)
 
 on:
   push:
@@ -7,10 +7,6 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
-concurrency:
-  group: ci-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
   test-build:
     runs-on: ubuntu-latest
@@ -18,13 +14,6 @@ jobs:
       CI: true
 
     steps:
-      # Garante que SEMPRE teremos algo pra enviar como artefato
-      - name: Init logs dir (very early)
-        shell: bash
-        run: |
-          mkdir -p logs
-          echo "CI started at $(date -u)" | tee logs/00-start.txt
-
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -32,73 +21,27 @@ jobs:
           persist-credentials: false
           submodules: false
 
-      # 1) pnpm/action-setup (mais confiável)
-      - name: Setup PNPM (action)
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10.18.2
-          run_install: false
-
-      # 2) Node + cache de pnpm
       - name: Setup Node 20
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: pnpm
 
-      # 3) Corepack + fallback npm -g (pro caso extremo)
-      - name: Ensure pnpm available (triple fallback)
-        shell: bash
+      - name: Install PNPM 10.18.2 globally
         run: |
-          set -euxo pipefail
-          {
-            echo "Node: $(node -v)"
-            echo "NPM:  $(npm -v)"
-            echo "PATH: $PATH"
-          } | tee -a logs/01-env.txt
+          npm i -g pnpm@10.18.2
+          pnpm -v
+          node -v
+          npm -v
 
-          command -v pnpm && pnpm -v | tee -a logs/01-env.txt || true
-
-          corepack enable || true
-          corepack prepare pnpm@10.18.2 --activate || true
-
-          if ! command -v pnpm >/dev/null 2>&1; then
-            echo "pnpm ainda não disponível; instalando via npm -g" | tee -a logs/01-env.txt
-            npm i -g pnpm@10.18.2
-          fi
-
-          echo "pnpm path: $(command -v pnpm)" | tee -a logs/01-env.txt
-          pnpm -v | tee -a logs/01-env.txt
-
-      # Instala dependências do monorepo
       - name: Install deps (workspace)
-        shell: bash
-        run: |
-          pnpm install -r --frozen-lockfile 2>&1 | tee -a logs/install.txt
+        run: pnpm install -r --frozen-lockfile
 
-      # Prisma não depende de Postgres para "generate"
       - name: Prisma generate (backend)
-        shell: bash
-        run: |
-          pnpm --filter "./asclepius-backend" exec prisma generate 2>&1 | tee -a logs/prisma.txt
+        run: pnpm --filter "./asclepius-backend" exec prisma generate
 
-      # Build + Test do backend (somente)
       - name: Build (backend)
-        shell: bash
-        run: |
-          pnpm --filter "./asclepius-backend" run build 2>&1 | tee -a logs/build-backend.txt
+        run: pnpm --filter "./asclepius-backend" run build
 
       - name: Test (backend)
-        shell: bash
-        run: |
-          pnpm --filter "./asclepius-backend" run test 2>&1 | tee -a logs/test-backend.txt
-
-      # Upload de logs SEMPRE, mesmo com falha anterior
-      - name: Upload logs
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: ci-logs
-          path: logs/**
-          if-no-files-found: warn
-          retention-days: 7
+        run: pnpm --filter "./asclepius-backend" run test
